--- a/spring/spring-boot-parent/pom.xml
+++ b/spring/spring-boot-parent/pom.xml
@@ -45,6 +45,13 @@
             <version>${spring-boot.version}</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.11</version>
+            <scope>test</scope>
+        </dependency>
 		
 		<dependency>
 		  <groupId>com.fasterxml.jackson.datatype</groupId>
