--- a/spring/configs/mysqlJdbc-dev.yml
+++ b/spring/configs/mysqlJdbc-dev.yml
@@ -1,3 +1,5 @@
+server:
+  port: 8082
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/Person?serverTimezone=America/Sao_Paulo&useSSL=false
