--- a/spring/configs/mysqlJdbc-dev.yml
+++ b/spring/configs/mysqlJdbc-dev.yml
@@ -1,5 +1,11 @@
 server:
   port: 8082
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8084/eureka/
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/Person?serverTimezone=America/Sao_Paulo&useSSL=false
