--- a/spring/configs/gateway-feign-dev.yml
+++ b/spring/configs/gateway-feign-dev.yml
@@ -1,2 +1,8 @@
 server:
   port: 9000
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8084/eureka/
