--- a/spring/configs/eureka-dev.yml
+++ b/spring/configs/eureka-dev.yml
@@ -4,6 +4,8 @@ eureka:
   client:
     register-with-eureka: false
     fetch-registry: false
+    serviceUrl:
+      defaultZone: http://localhost:8084/eureka/
 spring:
   jpa:
       hibernate.ddl-auto: create-drop
