--- a/spring/configs/gateway-feign-dev.yml
+++ b/spring/configs/gateway-feign-dev.yml
@@ -6,3 +6,8 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8084/eureka/
+feign:
+  client:
+    config:
+      feignName:
+        errorDecoder: com.usecases.spring.gateway.config.ErrorDecoderImpl
