--- a/spring/configs/gateway-feign-dev.yml
+++ b/spring/configs/gateway-feign-dev.yml
@@ -9,5 +9,5 @@ eureka:
 feign:
   client:
     config:
-      feignName:
+      default:
         errorDecoder: com.usecases.spring.gateway.config.ErrorDecoderImpl
